feat: [core-services] update coreservices
